# typer

./: .clang-format  CMakeLists.txt  README.md
include/typer/: declaration.hpp  introspection.hpp
include/typer/extra/: equal.hpp  equal_op.hpp  hash.hpp  ostream_op.hpp  print.hpp
test/: equal.test.cpp  example.hpp  hash.test.cpp  introspection.test.cpp  nlohmann_json.test.cpp  print.test.cpp
